base/syncthing/syncthingArgoApp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${SYNCTHING_NAMESPACE}
  labels:
    initial-deploy-with-kubectl: "true"
