base/syncthing/syncthingService.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
  namespace: ${SYNCTHING_NAMESPACE}
  labels:
    app: syncthing
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
  - name: web-ui
    port: 8384
    targetPort: web-ui
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
  namespace: ${SYNCTHING_NAMESPACE}
  labels:
    app: syncthing
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${SYNCTHING_SYNC_DOMAIN}
    advertise-via-dns: "true"
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
  - name: sync-tcp
    port: 22000
    targetPort: sync-tcp
    protocol: TCP
  - name: sync-udp
    port: 22000
    targetPort: sync-udp
    protocol: UDP
  - name: discovery
    port: 21027
    targetPort: discovery
    protocol: UDP
