base/syncthing/syncthingIngress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-web-ui
  namespace: ${SYNCTHING_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: ${TALOS_CLUSTER_NAME}-ca-issuer
    cert-manager.io/common-name: ${SYNCTHING_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${SYNCTHING_DOMAIN}`)
      kind: Rule
      services:
        - name: syncthing-gui
          port: 8384
  tls:
    secretName: syncthing-tls-cert
